fixed all background images to cover screen width upon the screen becoming too large

--- a/parmis-test/css/grid.css
+++ b/parmis-test/css/grid.css
@@ -204,8 +204,22 @@ fieldset {
 @media screen and (min-width: 1600px) {
 
     .bg-index{
-    background-size:cover;
+      background-size:cover;
     }
+
+    .bg-collection{
+      background-size:cover;
+    }
+
+
+    .bg-contact{
+      background-size:cover;
+    }
+
+    .bg-product-1{
+      background-size:cover;
+    }
+
 
 }
 
